# Phylip

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  config.yaml  raylib.diff
resources/: config.yaml  config_flat.yaml  config_vertical.yaml  flat.yaml  scene.yaml  vertical.yaml
resources/shaders/: lighting_fs.glsl
src/: attachment_constraint.cpp  attachment_constraint.hpp  camera.cpp  camera.hpp  cloth_mesh.cpp  cloth_mesh.hpp  cloth_simulator.cpp  cloth_simulator.hpp  constraint.hpp  constraints.hpp  defs.hpp  gui_wrapper.cpp  gui_wrapper.hpp  main.cpp  mesh.cpp  mesh.hpp  mmesh.cpp  mmesh.hpp  mtransform.cpp  mtransform.hpp  options.cpp  options.hpp  primitive.cpp  primitive.hpp  renderer.cpp  renderer.hpp  scene.cpp  scene.hpp  scene_parser.cpp  scene_parser.hpp  shader.cpp  shader.hpp  shader_map.cpp  shader_map.hpp  simulation.cpp  simulation.hpp  sphere_primitive.cpp  sphere_primitive.hpp  spring_constraint.cpp  spring_constraint.hpp  (+2 more)
